  * t/040_upgrade.t: Add test case for a database with read only default
    transactions. Reproduces #599085.
  * pg_upgradecluster: Set superuser configuration value of
    'default_transaction_read_only' to 'off' during the upgrade, so that
    upgrading databases with read only default transactions actually works.
    Thanks Karsten Hilbert for the suggestion. (Closes: #599085)

 -- Martin Pitt <mpitt@debian.org>  Sun, 28 Aug 2011 17:19:28 +0200

postgresql-common (121) unstable; urgency=low

  [ Martin Pitt ]
  * debian/supported-versions: Switch Ubuntu 11.10 to 9.1 (LP: #833684) and
    also preemtively add Ubuntu 12.04 (which will ship with 9.1, too).
  * debian/control: Bump Standards-Version to 3.9.2, no changes necessary.
  * debian/rules: Call dh_installinit with -r to avoid restarting on upgrade.
    (Closes: #639140)
  * debian/control: Wrap dependencies.
  * debian/control, debian/rules: Convert from cdbs to dh, and bump
    Standards-Version to 7.
  * debian/control, debian/rules: Build the versionless metapackages from this
    source instead of the current postgresql-X.Y source. This behaves better
    with backports. Thanks to Christoph Berg for the suggestion.
  * debian/postgresql-common.lintian-overrides: Don't complain about missing
    manpage for pg_config, it's shipped by libpq-dev.
  * debian/control: Update description of the metapackages to actually say
    "metapackage" to quiesce lintian.
  * Split POD of pg_buildext into pg_buildext.pod, and update debian/rules to
    build the manpage from there. Fixes lintian "shell syntax failure"
    error.

  [ Peter Eisentraut ] 
  * pg_createcluster:
    - Use "peer" instead of "ident" on local socket connections from 9.1 on.
    - Apply pg_hba.conf adjustments to replication connections as well.
    - (Closes: #632702)

 -- Martin Pitt <mpitt@debian.org>  Sat, 27 Aug 2011 14:01:11 +0200

postgresql-common (120) unstable; urgency=low
