@@ -27,23 +27,23 @@ is ((system "pg_ctlcluster $MAJORS[0] upgr start"), 0, 'Starting upgr cluster');
 # Create nobody user, test database, and put a table into it
 is ((exec_as 'postgres', 'createuser nobody -D -R -s && createdb -O nobody test && createdb -O nobody testnc && createdb -O nobody testro'), 
 	0, 'Create nobody user and test databases');
-is ((exec_as 'nobody', 'psql test -c "create table phone (name varchar(255) PRIMARY KEY, tel int NOT NULL)"'), 
+is ((exec_as 'nobody', 'psql test -c "CREATE TABLE phone (name varchar(255) PRIMARY KEY, tel int NOT NULL)"'), 
     0, 'create table');
-is ((exec_as 'nobody', 'psql test -c "insert into phone values (\'Alice\', 2)"'), 0, 'insert Alice into phone table');
-is ((exec_as 'postgres', 'psql template1 -c "update pg_database set datallowconn = \'f\' where datname = \'testnc\'"'), 
+is ((exec_as 'nobody', 'psql test -c "INSERT INTO phone VALUES (\'Alice\', 2)"'), 0, 'insert Alice into phone table');
+is ((exec_as 'postgres', 'psql template1 -c "UPDATE pg_database SET datallowconn = \'f\' WHERE datname = \'testnc\'"'), 
     0, 'disallow connection to testnc');
-is ((exec_as 'nobody', 'psql testro -c "create table nums (num int NOT NULL); insert into nums values (1)"'), 0, 'create table in testro');
+is ((exec_as 'nobody', 'psql testro -c "CREATE TABLE nums (num int NOT NULL); INSERT INTO nums VALUES (1)"'), 0, 'create table in testro');
 is ((exec_as 'postgres', 'psql template1 -c "ALTER DATABASE testro SET default_transaction_read_only TO on"'), 
     0, 'set testro transaction default to readonly');
-is ((exec_as 'nobody', 'psql testro -c "create table test(num int)"'), 
+is ((exec_as 'nobody', 'psql testro -c "CREATE TABLE test(num int)"'), 
     1, 'creating table in testro fails');
 
 # create a sequence
-is ((exec_as 'nobody', 'psql test -c "create sequence odd10 increment by 2 minvalue 1 maxvalue 10 cycle"'),
+is ((exec_as 'nobody', 'psql test -c "CREATE SEQUENCE odd10 INCREMENT BY 2 MINVALUE 1 MAXVALUE 10 CYCLE"'),
     0, 'create sequence');
-is_program_out 'nobody', 'psql -Atc "select nextval(\'odd10\')" test', 0, "1\n",
+is_program_out 'nobody', 'psql -Atc "SELECT nextval(\'odd10\')" test', 0, "1\n",
     'check next sequence value';
-is_program_out 'nobody', 'psql -Atc "select nextval(\'odd10\')" test', 0, "3\n",
+is_program_out 'nobody', 'psql -Atc "SELECT nextval(\'odd10\')" test', 0, "3\n",
     'check next sequence value';
 
 # create stored procedures
@@ -54,20 +54,20 @@ if ($MAJORS[0] lt '9.0') {
     pass '...';
 }
 is_program_out 'nobody', 'psql test -c "CREATE FUNCTION inc2(integer) RETURNS integer LANGUAGE plpgsql AS \'BEGIN RETURN \$1 + 2; END;\';"',
-    0, "CREATE FUNCTION\n", 'create function inc2';
-is_program_out 'postgres', "psql -c \"update pg_proc set probin = '/usr/lib/postgresql/$MAJORS[0]/lib/plpgsql.so' where proname = 'plpgsql_call_handler';\" test",
+    0, "CREATE FUNCTION\n", 'CREATE FUNCTION inc2';
+is_program_out 'postgres', "psql -c \"UPDATE pg_proc SET probin = '/usr/lib/postgresql/$MAJORS[0]/lib/plpgsql.so' where proname = 'plpgsql_call_handler';\" test",
     0, "UPDATE 1\n", 'hardcoding plpgsql lib path';
 is_program_out 'nobody', 'psql test -c "CREATE FUNCTION inc3(integer) RETURNS integer LANGUAGE plpgsql AS \'BEGIN RETURN \$1 + 3; END;\';"',
     0, "CREATE FUNCTION\n", 'create function inc3';
-is_program_out 'nobody', 'psql -Atc "select inc2(3)" test', 0, "5\n", 
+is_program_out 'nobody', 'psql -Atc "SELECT inc2(3)" test', 0, "5\n", 
     'call function inc2';
-is_program_out 'nobody', 'psql -Atc "select inc3(3)" test', 0, "6\n", 
+is_program_out 'nobody', 'psql -Atc "SELECT inc3(3)" test', 0, "6\n", 
     'call function inc3';
 
 # create user and group
-is_program_out 'postgres', "psql -qc 'create user foo' template1", 0, '',
+is_program_out 'postgres', "psql -qc 'CREATE USER foo' template1", 0, '',
     'create user foo';
-is_program_out 'postgres', "psql -qc 'create group gfoo' template1", 0, '', 
+is_program_out 'postgres', "psql -qc 'CREATE GROUP gfoo' template1", 0, '', 
     'create group gfoo';
 
 # create per-database and per-table ACL	
@@ -92,7 +92,7 @@ like_program_out 'nobody', 'pg_lsclusters -h', 0,
 
 # Check SELECT in original cluster
 my $select_old;
-is ((exec_as 'nobody', 'psql -tAc "select * from phone order by name" test', $select_old), 0, 'SELECT succeeds');
+is ((exec_as 'nobody', 'psql -tAc "SELECT * FROM phone ORDER BY name" test', $select_old), 0, 'SELECT succeeds');
 is ($$select_old, 'Alice|2
 Bob|1
 ', 'check SELECT output');
@@ -152,29 +152,29 @@ $MAJORS[-1]     upgr      5432 online postgres /var/lib/postgresql/$MAJORS[-1]/u
 ", 'pg_lsclusters output';
 
 # Check that SELECT output is identical
-is_program_out 'nobody', 'psql -tAc "select * from phone order by name" test', 0,
+is_program_out 'nobody', 'psql -tAc "SELECT * FROM phone ORDER BY name" test', 0,
     $$select_old, 'SELECT output is the same in original and upgraded test';
-is_program_out 'nobody', 'psql -tAc "select * from nums" testro', 0,
+is_program_out 'nobody', 'psql -tAc "SELECT * FROM nums" testro', 0,
     "1\n", 'SELECT output is the same in original and upgraded testro';
 
 # Check sequence value
-is_program_out 'nobody', 'psql -Atc "select nextval(\'odd10\')" test', 0, "5\n",
+is_program_out 'nobody', 'psql -Atc "SELECT nextval(\'odd10\')" test', 0, "5\n",
     'check next sequence value';
-is_program_out 'nobody', 'psql -Atc "select nextval(\'odd10\')" test', 0, "7\n",
+is_program_out 'nobody', 'psql -Atc "SELECT nextval(\'odd10\')" test', 0, "7\n",
     'check next sequence value';
-is_program_out 'nobody', 'psql -Atc "select nextval(\'odd10\')" test', 0, "9\n",
+is_program_out 'nobody', 'psql -Atc "SELECT nextval(\'odd10\')" test', 0, "9\n",
     'check next sequence value';
-is_program_out 'nobody', 'psql -Atc "select nextval(\'odd10\')" test', 0, "1\n",
+is_program_out 'nobody', 'psql -Atc "SELECT nextval(\'odd10\')" test', 0, "1\n",
     'check next sequence value (wrap)';
 
 # check stored procedures
-is_program_out 'nobody', 'psql -Atc "select inc2(-3)" test', 0, "-1\n", 
+is_program_out 'nobody', 'psql -Atc "SELECT inc2(-3)" test', 0, "-1\n", 
     'call function inc2';
-is_program_out 'nobody', 'psql -Atc "select inc3(1)" test', 0, "4\n", 
+is_program_out 'nobody', 'psql -Atc "SELECT inc3(1)" test', 0, "4\n", 
     'call function inc3 (formerly hardcoded path)';
 
 # Check connection permissions
-is_program_out 'nobody', 'psql -tAc "select datname, datallowconn from pg_database order by datname" template1', 0,
+is_program_out 'nobody', 'psql -tAc "SELECT datname, datallowconn FROM pg_database ORDER BY datname" template1', 0,
     'postgres|t
 template0|f
 template1|t
@@ -190,13 +190,13 @@ is_program_out 'nobody', 'psql -U foo -qc "INSERT INTO phone VALUES (\'Chris\', 
     0, '', 'insert Chris into phone table (ACL)';
 
 # check default transaction r/o
-is ((exec_as 'nobody', 'psql test -c "create table test(num int)"'), 
+is ((exec_as 'nobody', 'psql test -c "CREATE TABLE test(num int)"'), 
     0, 'creating table in test succeeds');
-is ((exec_as 'nobody', 'psql testro -c "create table test(num int)"'), 
+is ((exec_as 'nobody', 'psql testro -c "CREATE TABLE test(num int)"'), 
     1, 'creating table in testro fails');
-is ((exec_as 'postgres', 'psql testro -c "create table test(num int)"'), 
+is ((exec_as 'postgres', 'psql testro -c "CREATE TABLE test(num int)"'), 
     1, 'creating table in testro as superuser fails');
-is ((exec_as 'nobody', 'psql testro -c "begin read write; create table test(num int); commit"'), 
+is ((exec_as 'nobody', 'psql testro -c "BEGIN READ WRITE; CREATE TABLE test(num int); COMMIT"'), 
     0, 'creating table in test succeeds with RW transaction');
 
 # check DB parameter
@@ -206,7 +206,7 @@ is_program_out 'postgres', 'psql -Atc "SHOW DateStyle" test', 0, 'ISO, YMD
 # stop servers, clean up
 is ((system "pg_dropcluster $MAJORS[0] upgr --stop"), 0, 'Dropping original cluster');
 is ((system "pg_ctlcluster $MAJORS[-1] upgr restart"), 0, 'Restarting upgraded cluster');
-is_program_out 'nobody', 'psql -Atc "select nextval(\'odd10\')" test', 0, "3\n",
+is_program_out 'nobody', 'psql -Atc "SELECT nextval(\'odd10\')" test', 0, "3\n",
     'upgraded cluster still works after removing old one';
 is ((system "pg_dropcluster $MAJORS[-1] upgr --stop"), 0, 'Dropping upgraded cluster');
 
