@@ -19,6 +19,8 @@ postgresql-common (122) UNRELEASED; urgency=low
     'default_transaction_read_only' to 'off' during the upgrade, so that
     upgrading databases with read only default transactions actually works.
     Thanks Karsten Hilbert for the suggestion. (Closes: #599085)
+  * t/040_upgrade.t, pg_upgradecluster: Consistently use upper case for SQL
+    keywords.
 
  -- Martin Pitt <mpitt@debian.org>  Sun, 28 Aug 2011 17:19:28 +0200
 
